add missing virtual destructors

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -4,8 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=573,414
+Pos=317,183
 Size=550,489
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=139,187
+Size=570,109
 Collapsed=0
 
 [Docking][Data]
