Add texture2D; Test ImGui::Image

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -4,13 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=317,183
+Pos=22,141
 Size=550,489
 Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=139,187
 Size=570,109
+Collapsed=0
+
+[Window][Test window]
+Pos=603,121
+Size=1069,696
 Collapsed=0
 
 [Docking][Data]
