Add OpenSpriteAtlasModal, DockSpace, MainMenuBar

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -1,12 +1,13 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=311,73
+Size=379,273
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=966,200
-Size=550,512
+Pos=0,19
+Size=516,998
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][About Dear ImGui]
 Pos=139,187
@@ -15,8 +16,31 @@ Collapsed=0
 
 [Window][Test window]
 Pos=9,49
-Size=395,406
+Size=769,525
+Collapsed=0
+
+[Window][Open sprite sheet]
+Pos=142,156
+Size=516,288
+Collapsed=0
+
+[Window][Canvas]
+Pos=0,19
+Size=800,581
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][DockSpace]
+Size=1920,1017
+Collapsed=0
+
+[Window][DockSpaceWindow]
+Pos=0,0
+Size=800,600
 Collapsed=0
 
 [Docking][Data]
+DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
+  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=516,998 Selected=0xE927CF2F
+  DockNode  ID=0x00000005 Parent=0xF15DEC6E SizeRef=1402,998 CentralNode=1 Selected=0xA233692E
 
