Add SpriteEditor basic impl

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -20,13 +20,13 @@ Size=769,525
 Collapsed=0
 
 [Window][Open sprite sheet]
-Pos=142,156
+Pos=-48,-34
 Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=0,19
-Size=800,581
+Pos=303,19
+Size=1617,998
 Collapsed=0
 DockId=0x00000005,0
 
@@ -36,11 +36,27 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=1920,1017
 Collapsed=0
 
+[Window][Control]
+Pos=0,19
+Size=156,581
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Controls]
+Pos=0,19
+Size=301,998
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
-DockSpace   ID=0xF15DEC6E Window=0x41896AB8 Pos=164,206 Size=800,581 Split=X Selected=0xA233692E
-  DockNode  ID=0x00000002 Parent=0xF15DEC6E SizeRef=516,998 Selected=0xE927CF2F
-  DockNode  ID=0x00000005 Parent=0xF15DEC6E SizeRef=1402,998 CentralNode=1 Selected=0xA233692E
+DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,42 Size=1920,998 Split=X Selected=0xA233692E
+  DockNode      ID=0x00000007 Parent=0xF15DEC6E SizeRef=301,998 Selected=0x039BEE69
+  DockNode      ID=0x00000008 Parent=0xF15DEC6E SizeRef=1617,998 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
+    DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 Split=X
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=516,998 Selected=0xE927CF2F
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1402,998 CentralNode=1 Selected=0xA233692E
 
