--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -20,13 +20,13 @@ Size=769,525
 Collapsed=0
 
 [Window][Open sprite sheet]
-Pos=702,364
+Pos=142,156
 Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=127,19
-Size=673,581
+Pos=409,19
+Size=1511,998
 Collapsed=0
 DockId=0x00000005,0
 
@@ -36,7 +36,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=1920,1017
 Collapsed=0
 
 [Window][Control]
@@ -47,14 +47,22 @@ DockId=0x00000001,0
 
 [Window][Controls]
 Pos=0,19
-Size=125,581
+Size=407,463
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000004,0
+
+[Window][Sprites]
+Pos=0,484
+Size=407,533
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
-  DockNode      ID=0x00000007 Parent=0xF15DEC6E SizeRef=301,998 Selected=0x039BEE69
-  DockNode      ID=0x00000008 Parent=0xF15DEC6E SizeRef=1617,998 Split=X
+DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1920,998 Split=X Selected=0xA233692E
+  DockNode      ID=0x00000007 Parent=0xF15DEC6E SizeRef=407,998 Split=Y Selected=0x039BEE69
+    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
+    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
+  DockNode      ID=0x00000008 Parent=0xF15DEC6E SizeRef=1511,998 Split=X
     DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
     DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 Split=X
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=516,998 Selected=0xE927CF2F
