cell size control

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -4,10 +4,9 @@ Size=379,273
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=516,998
+Pos=781,111
+Size=516,898
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][About Dear ImGui]
 Pos=139,187
@@ -25,10 +24,10 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=274,19
-Size=1008,616
+Pos=244,19
+Size=556,581
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][DockSpace]
 Size=1920,1017
@@ -36,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1282,635
+Size=800,600
 Collapsed=0
 
 [Window][Control]
@@ -47,24 +46,39 @@ DockId=0x00000001,0
 
 [Window][Controls]
 Pos=0,19
-Size=272,285
+Size=242,269
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,306
-Size=272,329
+Pos=0,290
+Size=242,310
 Collapsed=0
 DockId=0x00000006,0
 
+[Table][0xC179E37C,3]
+RefScale=13
+Column 0  Width=108 Sort=0v
+Column 1  Width=63
+Column 2  Width=-1
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
 [Docking][Data]
-DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1282,616 Split=X Selected=0xA233692E
-  DockNode      ID=0x00000007 Parent=0xF15DEC6E SizeRef=407,998 Split=Y Selected=0x039BEE69
-    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
-    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
-  DockNode      ID=0x00000008 Parent=0xF15DEC6E SizeRef=1511,998 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
-    DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 Split=X
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=516,998 Selected=0xE927CF2F
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1402,998 CentralNode=1 Selected=0xA233692E
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
+  DockNode    ID=0x00000007 Parent=0xF15DEC6E SizeRef=581,998 Split=Y Selected=0x039BEE69
+    DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
+    DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
+  DockNode    ID=0x00000008 Parent=0xF15DEC6E SizeRef=1337,998 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
+    DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
 
