--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -24,8 +24,8 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=244,19
-Size=556,581
+Pos=428,19
+Size=980,791
 Collapsed=0
 DockId=0x00000003,0
 
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=1408,810
 Collapsed=0
 
 [Window][Control]
@@ -46,15 +46,20 @@ DockId=0x00000001,0
 
 [Window][Controls]
 Pos=0,19
-Size=242,269
+Size=426,367
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,290
-Size=242,310
+Pos=0,388
+Size=426,422
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][New spritesheet]
+Pos=158,183
+Size=484,233
+Collapsed=0
 
 [Table][0xC179E37C,3]
 RefScale=13
@@ -74,7 +79,7 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
+DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1408,791 Split=X Selected=0xA233692E
   DockNode    ID=0x00000007 Parent=0xF15DEC6E SizeRef=581,998 Split=Y Selected=0x039BEE69
     DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
     DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
