--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -24,8 +24,8 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=567,19
-Size=1353,998
+Pos=149,19
+Size=353,581
 Collapsed=0
 DockId=0x00000003,0
 
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1017
+Size=800,600
 Collapsed=0
 
 [Window][Control]
@@ -46,13 +46,13 @@ DockId=0x00000001,0
 
 [Window][Controls]
 Pos=0,19
-Size=565,463
+Size=147,269
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,484
-Size=565,533
+Pos=0,290
+Size=147,310
 Collapsed=0
 DockId=0x00000006,0
 
@@ -60,6 +60,12 @@ DockId=0x00000006,0
 Pos=718,392
 Size=484,233
 Collapsed=0
+
+[Window][Selection]
+Pos=504,19
+Size=296,581
+Collapsed=0
+DockId=0x00000005,0
 
 [Table][0xC179E37C,3]
 RefScale=13
@@ -79,11 +85,13 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace     ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1920,998 Split=X Selected=0xA233692E
-  DockNode    ID=0x00000007 Parent=0xF15DEC6E SizeRef=565,998 Split=Y Selected=0x039BEE69
-    DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
-    DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
-  DockNode    ID=0x00000008 Parent=0xF15DEC6E SizeRef=1353,998 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
-    DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
+DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
+  DockNode      ID=0x00000002 Parent=0xF15DEC6E SizeRef=502,581 Split=X
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=565,998 Split=Y Selected=0x039BEE69
+      DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
+      DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1353,998 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
+      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
+  DockNode      ID=0x00000005 Parent=0xF15DEC6E SizeRef=296,581 Selected=0x14548E74
 
