--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -24,8 +24,8 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=149,19
-Size=353,581
+Pos=357,19
+Size=850,998
 Collapsed=0
 DockId=0x00000003,0
 
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=1920,1017
 Collapsed=0
 
 [Window][Control]
@@ -46,13 +46,13 @@ DockId=0x00000001,0
 
 [Window][Controls]
 Pos=0,19
-Size=147,269
+Size=355,463
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,290
-Size=147,310
+Pos=0,484
+Size=355,533
 Collapsed=0
 DockId=0x00000006,0
 
@@ -62,10 +62,15 @@ Size=484,233
 Collapsed=0
 
 [Window][Selection]
-Pos=504,19
-Size=296,581
+Pos=1209,19
+Size=711,998
 Collapsed=0
 DockId=0x00000005,0
+
+[Window][New sprite atlas]
+Pos=378,232
+Size=1163,552
+Collapsed=0
 
 [Table][0xC179E37C,3]
 RefScale=13
@@ -85,7 +90,7 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
+DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1920,998 Split=X Selected=0xA233692E
   DockNode      ID=0x00000002 Parent=0xF15DEC6E SizeRef=502,581 Split=X
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=565,998 Split=Y Selected=0x039BEE69
       DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
