Display a sequence number on selected grid cells

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -24,8 +24,8 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=149,19
-Size=353,581
+Pos=435,19
+Size=772,998
 Collapsed=0
 DockId=0x00000003,0
 
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=1920,1017
 Collapsed=0
 
 [Window][Control]
@@ -51,10 +51,10 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,290
-Size=147,310
+Pos=0,539
+Size=433,478
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][New spritesheet]
 Pos=718,392
@@ -62,8 +62,8 @@ Size=484,233
 Collapsed=0
 
 [Window][Selection]
-Pos=504,19
-Size=296,581
+Pos=1209,19
+Size=711,998
 Collapsed=0
 DockId=0x00000005,0
 
@@ -71,6 +71,12 @@ DockId=0x00000005,0
 Pos=378,232
 Size=1163,552
 Collapsed=0
+
+[Window][Toolbar]
+Pos=0,19
+Size=433,518
+Collapsed=0
+DockId=0x00000009,0
 
 [Table][0xC179E37C,3]
 RefScale=13
@@ -90,13 +96,15 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace       ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
-  DockNode      ID=0x00000002 Parent=0xF15DEC6E SizeRef=502,581 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=565,998 Split=Y Selected=0x039BEE69
-      DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
-      DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Selected=0xC331555B
-    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1353,998 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
-      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
-  DockNode      ID=0x00000005 Parent=0xF15DEC6E SizeRef=296,581 Selected=0x14548E74
+DockSpace         ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1920,998 Split=X Selected=0xA233692E
+  DockNode        ID=0x00000002 Parent=0xF15DEC6E SizeRef=502,581 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=433,998 Split=Y Selected=0x039BEE69
+      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
+      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Split=Y Selected=0xC331555B
+        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=147,301 Selected=0x507852CA
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=147,278 Selected=0xC331555B
+    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=772,998 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
+      DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
+  DockNode        ID=0x00000005 Parent=0xF15DEC6E SizeRef=296,581 Selected=0x14548E74
 
