--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -24,8 +24,8 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=435,19
-Size=772,998
+Pos=182,19
+Size=320,581
 Collapsed=0
 DockId=0x00000003,0
 
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1017
+Size=800,600
 Collapsed=0
 
 [Window][Control]
@@ -51,8 +51,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,539
-Size=433,478
+Pos=0,322
+Size=180,278
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -62,8 +62,8 @@ Size=484,233
 Collapsed=0
 
 [Window][Selection]
-Pos=1209,19
-Size=711,998
+Pos=504,19
+Size=296,581
 Collapsed=0
 DockId=0x00000005,0
 
@@ -74,9 +74,14 @@ Collapsed=0
 
 [Window][Toolbar]
 Pos=0,19
-Size=433,518
+Size=180,301
 Collapsed=0
 DockId=0x00000009,0
+
+[Window][Clear sprites]
+Pos=199,249
+Size=402,101
+Collapsed=0
 
 [Table][0xC179E37C,3]
 RefScale=13
@@ -96,7 +101,7 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace         ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=1920,998 Split=X Selected=0xA233692E
+DockSpace         ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
   DockNode        ID=0x00000002 Parent=0xF15DEC6E SizeRef=502,581 Split=X
     DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=433,998 Split=Y Selected=0x039BEE69
       DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
