--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -68,7 +68,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][New sprite atlas]
-Pos=757,415
+Pos=197,207
 Size=406,186
 Collapsed=0
 
@@ -81,6 +81,11 @@ DockId=0x00000009,0
 [Window][Clear sprites]
 Pos=199,249
 Size=402,101
+Collapsed=0
+
+[Window][New animation atlas]
+Pos=148,157
+Size=504,285
 Collapsed=0
 
 [Table][0xC179E37C,3]
