Animator toolbar window groundwork

--- a/src/AWayBack.Tools/imgui.ini
+++ b/src/AWayBack.Tools/imgui.ini
@@ -24,8 +24,8 @@ Size=516,288
 Collapsed=0
 
 [Window][Canvas]
-Pos=167,19
-Size=435,581
+Pos=799,19
+Size=2099,1985
 Collapsed=0
 DockId=0x00000003,0
 
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=800,600
+Size=3840,2004
 Collapsed=0
 
 [Window][Control]
@@ -51,8 +51,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Sprites]
-Pos=0,322
-Size=165,278
+Pos=0,1052
+Size=797,952
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -62,8 +62,8 @@ Size=484,233
 Collapsed=0
 
 [Window][Selection]
-Pos=604,19
-Size=196,581
+Pos=2900,19
+Size=940,1985
 Collapsed=0
 DockId=0x00000005,0
 
@@ -74,9 +74,9 @@ Collapsed=0
 
 [Window][Toolbar]
 Pos=0,19
-Size=165,301
+Size=797,550
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000B,0
 
 [Window][Clear sprites]
 Pos=199,249
@@ -87,6 +87,12 @@ Collapsed=0
 Pos=148,157
 Size=504,285
 Collapsed=0
+
+[Window][Animator toolbar]
+Pos=0,571
+Size=797,479
+Collapsed=0
+DockId=0x0000000C,0
 
 [Table][0xC179E37C,3]
 RefScale=13
@@ -106,15 +112,17 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
-DockSpace         ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=800,581 Split=X Selected=0xA233692E
-  DockNode        ID=0x00000002 Parent=0xF15DEC6E SizeRef=1448,581 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=398,998 Split=Y Selected=0x039BEE69
-      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Split=Y Selected=0xC331555B
-        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=147,301 Selected=0x507852CA
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=147,278 Selected=0xC331555B
-    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1048,998 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
-      DockNode    ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
-  DockNode        ID=0x00000005 Parent=0xF15DEC6E SizeRef=470,581 Selected=0x14548E74
+DockSpace           ID=0xF15DEC6E Window=0x41896AB8 Pos=0,19 Size=3840,1985 Split=X Selected=0xA233692E
+  DockNode          ID=0x00000002 Parent=0xF15DEC6E SizeRef=1448,581 Split=X
+    DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=398,998 Split=Y Selected=0x039BEE69
+      DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=407,463 Selected=0x039BEE69
+      DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=407,533 Split=Y Selected=0xC331555B
+        DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=147,301 Split=Y Selected=0x507852CA
+          DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=797,550 Selected=0x507852CA
+          DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=797,479 Selected=0x50DED827
+        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=147,278 Selected=0xC331555B
+    DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=1048,998 Split=X
+      DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=375,581 Selected=0x226615D7
+      DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1543,581 CentralNode=1 Selected=0xA233692E
+  DockNode          ID=0x00000005 Parent=0xF15DEC6E SizeRef=470,581 Selected=0x14548E74
 
